# ChangeLog for dev-libs/glib
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/glib/ChangeLog,v 1.264 2007/06/02 05:17:07 leio Exp $

  02 Jun 2007; <leio@gentoo.org> -files/glib-2.12.4-gtimer-fix.patch,
  -files/glib-2.12.4-tests_pthread.patch, -files/glib-2-macos.patch,
  -glib-2.12.4-r1.ebuild, -glib-2.12.6.ebuild, -glib-2.12.7.ebuild:
  Remove redundant versions

  02 Jun 2007; Brent Baude <ranger@gentoo.org> glib-2.12.11.ebuild:
  Marking glib-2.12.11 ppc stable for bug #171107

  31 May 2007; Jeroen Roovers <jer@gentoo.org> glib-2.12.11.ebuild:
  Stable for HPPA (bug #171107).

  30 May 2007; Brent Baude <ranger@gentoo.org> glib-2.12.11.ebuild:
  Marking glib-2.12.11 ppc64 stable for bug 171107

  30 May 2007; Daniel Gryniewicz <dang@gentoo.org> glib-2.12.11.ebuild:
  Marked stable on amd64 for bug #171107

  30 May 2007; Raúl Porcel <armin76@gentoo.org> glib-2.12.11.ebuild:
  alpha/ia64 stable wrt #171107

  29 May 2007; Andrej Kacian <ticho@gentoo.org> glib-2.12.11.ebuild:
  Stable on x86, bug #171107.

  29 May 2007; Gustavo Zacarias <gustavoz@gentoo.org> glib-2.12.11.ebuild:
  Stable on sparc wrt #171107

  27 May 2007; Joshua Kinard <kumba@gentoo.org> glib-2.12.11.ebuild:
  Stable on mips.

  12 May 2007; Joshua Kinard <kumba@gentoo.org> glib-2.12.9.ebuild:
  Stable on mips for #163678.

  25 Apr 2007; Daniel Gryniewicz <dang@gentoo.org> glib-2.12.9.ebuild,
  glib-2.12.11.ebuild:
  Remove elibtoolize; it's not needed anymore, and it was causing problems
  with automake mismatches

  22 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> glib-2.12.9.ebuild:
  Stable on alpha/ia64/ppc wrt bug #163678.

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> glib-2.12.9.ebuild:
  Stable on ppc64; bug #163678

  15 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> glib-2.12.9.ebuild:
  Stable on sparc wrt #163678
