@@ -26,6 +26,7 @@ DIST glib-1.2.10-r1-as-needed.patch.bz2 9099 RMD160 5b7a21da6dc10112409bd885501a
 DIST glib-1.2.10.tar.gz 421480 RMD160 f19efe8c87ebeea979a4d36902d8a8209640cd95 SHA1 e5a9361c594608d152d5d9650154c2e3260b87fa SHA256 6e1ce7eedae713b11db82f11434d455d8a1379f783a79812cd2e05fc024a8d9f
 DIST glib-2.10.3.tar.bz2 2774011 RMD160 da56e238f4f6e9c6e7c08d4e53f75128b5178047 SHA1 bba1dea73c4426f6a130c82e0b7a07b78dfc73ce SHA256 1d3700e35ca7240a9ce28cf222429648ea50271d62524e008191ccd04a3f8f6f
 DIST glib-2.12.11.tar.bz2 2925342 RMD160 8680d27e630643e6653d88537907d06e3ba6e91a SHA1 02d344295ddaeafeec6bc6824b71e12bbf1b0394 SHA256 706aa9da1c096af8d27b3ddb5da4e321dd6b10f881887639e280e4e10b81c4b3
+DIST glib-2.12.12.tar.bz2 2938743 RMD160 bab462a1e4ef3e9905a4af5b727ad4f9ca03cf02 SHA1 527bced2e6d38169c08c8712d5e3b6ebb0dc46b5 SHA256 debc507172093ef7c74e8a83bf49e090cc24057b1807d3be22e5d7cbfab60054
 DIST glib-2.12.9.tar.bz2 2902738 RMD160 f762b65131f5c1f30ee2e25cb771c296715e6bd6 SHA1 387da30929047ef88a6f369831a34f41a3d027f7 SHA256 10113e7b91f858557c7edb4b611cc009855c5ff8663af54977a65acb69445058
 DIST glib-2.8.6.tar.bz2 2691171 RMD160 54b3b5c96f5050793fbadbd523bc33b6bd36b257 SHA1 28731dc4799efc1824610971c88a571f18bd8471 SHA256 e2da2eec8c87dccdbce16dcd77489d225b613074764f2f39f2815db15b5deeea
 EBUILD glib-1.2.10-r5.ebuild 1716 RMD160 068c9be8d342da4aa927c39c1ec63f266408b03d SHA1 2f48154af232513d7d40d91dbb89d2b033082e53 SHA256 14a7cc736b4aec42c5efe2eae04627a6066a48b55ae445f037ae3e7ba93704ec
@@ -44,6 +45,10 @@ EBUILD glib-2.12.11.ebuild 2077 RMD160 dca545c70a889cb3a1fb7b7cb8263615d3aaf1fb 
 MD5 579b92f88cdab1d75f59d1a0f27de491 glib-2.12.11.ebuild 2077
 RMD160 dca545c70a889cb3a1fb7b7cb8263615d3aaf1fb glib-2.12.11.ebuild 2077
 SHA256 2eb983eed5ac647088d34e5f01d51bd4d3f617315a857e355215280b4ee2c09b glib-2.12.11.ebuild 2077
+EBUILD glib-2.12.12.ebuild 2083 RMD160 15ba8bf9b30717416af3386b035c7a8401765888 SHA1 b6544906488774993cfc2d3e40ebf6266ba9ab89 SHA256 73a87891bc651f11082333ace81f66841007a0144545acdbb6a74c7720b1426a
+MD5 db2192eb5bdb13bf38c47ee20e1fa108 glib-2.12.12.ebuild 2083
+RMD160 15ba8bf9b30717416af3386b035c7a8401765888 glib-2.12.12.ebuild 2083
+SHA256 73a87891bc651f11082333ace81f66841007a0144545acdbb6a74c7720b1426a glib-2.12.12.ebuild 2083
 EBUILD glib-2.12.9.ebuild 2072 RMD160 f961e74a9e8cdb272c84b7c9edec176d7bfee5c3 SHA1 2c7df6129387f286b7dca57236107f7911651d39 SHA256 11397dc08a8abcd765c6ceeb64d320eb151b5facb4f68859393fcf51fe6ecbb0
 MD5 ee1215cfbe188f97d11aa86bbb32fd16 glib-2.12.9.ebuild 2072
 RMD160 f961e74a9e8cdb272c84b7c9edec176d7bfee5c3 glib-2.12.9.ebuild 2072
@@ -52,10 +57,10 @@ EBUILD glib-2.8.6.ebuild 1586 RMD160 5f33daf4eb864f33d091baa7e9eb038a4ced9705 SH
 MD5 86a8a7a320663e2e62d3e5d655caa664 glib-2.8.6.ebuild 1586
 RMD160 5f33daf4eb864f33d091baa7e9eb038a4ced9705 glib-2.8.6.ebuild 1586
 SHA256 0e8d42185e9bbee3008004bd262ca31e98b69a150a455a3a1c52ad227d95d584 glib-2.8.6.ebuild 1586
-MISC ChangeLog 31596 RMD160 6fe53287888facbca47fed1ba780eeba6dfb8b90 SHA1 2704ebfe8cc44bc0e86e7f60c5b7d122f5240a4e SHA256 27096ccfbf3097b360d32188605f23eb2024cf7a91e66fb4d557a7caa70f7200
-MD5 1a347b47e670424bf189117a12ae84be ChangeLog 31596
-RMD160 6fe53287888facbca47fed1ba780eeba6dfb8b90 ChangeLog 31596
-SHA256 27096ccfbf3097b360d32188605f23eb2024cf7a91e66fb4d557a7caa70f7200 ChangeLog 31596
+MISC ChangeLog 31724 RMD160 8a838a78930779ad2ef9a9e3c9664b72319846d9 SHA1 7ad590ae337e6a63db7d5b5828ca0e974ad9fbd4 SHA256 c1bc01adb9682d308bf0178024043538d3e6e008893ee9ee7d34213c548c9433
+MD5 c2344eea30fd488889c10a7bdc7d632d ChangeLog 31724
+RMD160 8a838a78930779ad2ef9a9e3c9664b72319846d9 ChangeLog 31724
+SHA256 c1bc01adb9682d308bf0178024043538d3e6e008893ee9ee7d34213c548c9433 ChangeLog 31724
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e metadata.xml 158
@@ -72,6 +77,9 @@ SHA256 d26cfbb6a042eef4f64ad487901b9f1ac518d1b68ae6d9210dc4c360d296b122 files/di
 MD5 a0f4860edacc36e48d45deaf914d12be files/digest-glib-2.12.11 244
 RMD160 f12347508ec013589a54b9858160c180e5cb9b55 files/digest-glib-2.12.11 244
 SHA256 c722fb41aed6aa6369379883717072f1b480000e39fbad6cc0d2dc180c31af85 files/digest-glib-2.12.11 244
+MD5 6c5b4075250f08e16e10788cba9f8e2e files/digest-glib-2.12.12 244
+RMD160 feeb5ec76ca900d93d34d7d809ebdc407e7cff25 files/digest-glib-2.12.12 244
+SHA256 7c9ab8245ffcb1104c207f57cf080ff57caf3be03a4ad344546085949f0d0410 files/digest-glib-2.12.12 244
 MD5 e4fdcf80cbc0628c5f2c7de9670c1c38 files/digest-glib-2.12.9 241
 RMD160 cf121051ee302e17dd049134564adbabae1ad129 files/digest-glib-2.12.9 241
 SHA256 1148de471d6405c9732db5dcfa51d665374d3d29ace118b50ced97b0d372a49b files/digest-glib-2.12.9 241
