@@ -1,0 +1,3 @@
+MD5 0b3a42098243d054475ff6eb51ed2be1 glib-2.12.12.tar.bz2 2938743
+RMD160 bab462a1e4ef3e9905a4af5b727ad4f9ca03cf02 glib-2.12.12.tar.bz2 2938743
+SHA256 debc507172093ef7c74e8a83bf49e090cc24057b1807d3be22e5d7cbfab60054 glib-2.12.12.tar.bz2 2938743
